Set batteryinfo version

--- a/arch/arm64/boot/dts/qcom/batterydata-M703-ATL-6000mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/batterydata-M703-ATL-6000mah.dtsi
@@ -20,7 +20,8 @@ qcom,m703-atl-6000mah {
 	qcom,battery-beta = <4250>;
 	qcom,battery-therm-kohm = <100>;
 	qcom,battery-type = "m703-atl-6000mah";
-	qcom,qg-batt-profile-ver = <100>;
+	//qcom,qg-batt-profile-ver = <100>;
+	qcom,oem-batt-profile-ver = <5>;
 	mi,six-pin-battery;
 
 	qcom,jeita-fcc-ranges = <(-100)  0   580000
