--- a/arch/arm64/boot/dts/qcom/sdmmagpie-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-idp.dtsi
@@ -401,7 +401,7 @@
 	qcom,qg-iterm-ma = <200>;
 	qcom,hold-soc-while-full;
 	qcom,linearize-soc;
-	qcom,cl-feedback-on;
+	//qcom,cl-feedback-on;
 	qcom,tcss-enable;
 	qcom,bass-enable;
 	qcom,vbatt-cutoff-mv = <3200>;
@@ -409,8 +409,8 @@
 	qcom,vbatt-low-cold-mv = <3500>;
 	qcom,vbatt-empty-mv = <3000>;
 	qcom,vbatt-empty-cold-mv = <3000>;
-	qcom,s3-entry-ibat-ua = <25000>;
-	qcom,s3-exit-ibat-ua = <45000>;
+	qcom,s3-entry-ibat-ua = <15000>;
+	qcom,s3-exit-ibat-ua = <35000>;
 	qcom,s3-entry-fifo-length = <2>;
 	qcom,qg-vadc = <&pm6150_vadc>;
 	qcom,qg-ext-sns;
@@ -429,6 +429,7 @@
 		95 10
 		99 5>;
 	qcom,qg-fast-chg-config;
+    qcom,cl-disable = <1>;
 };
 
 &pm6150_charger {
@@ -449,16 +450,17 @@
 	qcom,battery-data = <&mtp_batterydata>;
 	qcom,usb-icl-ua = <3000000>;
 	qcom,auto-recharge-soc = <99>;
-	qcom,fcc-max-ua-surya = <5000000>;
+    qcom,fcc-max-ua = <6000000>;
+	qcom,fcc-max-ua-surya = <5200000>;
 	qcom,fcc-max-ua-karna = <6000000>;
 	qcom,fv-max-uv = <4450000>;
 	qcom,chg-term-src = <1>;
 	qcom,chg-term-current-ma = <(-200)>;
 	qcom,sw-jeita-enable;
 	//qcom,fcc-stepping-enable;
-	qcom,suspend-input-on-debug-batt;
+	//qcom,suspend-input-on-debug-batt;
 	qcom,sec-charger-config = <0>;
-	qcom,thermal-mitigation = <6000000 5500000 5000000 5000000 5000000 4400000 4200000
+	qcom,thermal-mitigation = <6000000 5500000 5200000 5200000 5000000 4400000 4200000
 				   3800000 3800000 3600000 3400000 3200000 3000000 2200000
 				   1500000 900000>;
 	dpdm-supply = <&qusb_phy0>;
