--- a/arch/arm64/boot/dts/qcom/sdmmagpie-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie-sde.dtsi
@@ -195,6 +195,7 @@
 
 		qcom,sde-qos-cpu-mask = <0x3>;
 		qcom,sde-qos-cpu-dma-latency = <300>;
+		qcom,sde-qos-cpu-irq-latency = <300>;
 
 		/* offsets are relative to "mdp_phys + qcom,sde-off */
 
@@ -518,6 +519,7 @@
 						00 00 00 00
 						00 00 00 80];
 		qcom,platform-regulator-settings = [1d 1d 1d 1d 1d];
+        qcom,panel-allow-phy-poweroff;
 		qcom,phy-supply-entries {
 			#address-cells = <1>;
 			#size-cells = <0>;
