--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -372,17 +372,17 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				300000	10
-				576000	18
-				768000	23
-				1017600	36
-				1248000	52
-				1324800	67
-				1497600	76
-				1612800	92
-				1708800	113
-				1804800	119
-			>;
+				300000	146
+				576000	164
+				768000	176
+				1017600	191
+				1248000	209
+				1324800	213
+				1497600	224
+				1612800	230
+				1708800	235
+				1804800	251
+            >;
 			idle-cost-data = <
 				16 12 8 6
 			>;
@@ -390,22 +390,21 @@
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				300000	166
-				652800	242
-				806400	293
-				979200	424
-				1094400	470
-				1209600	621
-				1324800	676
-				1555200	973
-				1708800	1060
-				1843200	1298
-				1939200	1362
-				2169600	1801
-				2208000	2000
-				2361600	2326
-				2400000	2568
-			>;
+				300000	208
+				652800	266
+				806400	291
+				979200	334
+				1094400	370
+				1209600	395
+				1324800	432
+				1555200	542
+				1708800	622
+				1843200	701
+				1939200	775
+				2169600	998
+				2208000	1016
+				2304000	1101
+            >;
 			idle-cost-data = <
 				100 80 60 40
 			>;
@@ -444,8 +443,7 @@
 				1939200	50
 				2169600	60
 				2208000	61
-				2361600	62
-				2400000	63
+				2304000	62
 			>;
 			idle-cost-data = <
 				5 4 3 2 1
@@ -678,6 +676,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU0>;
+		status = "disabled";
 	};
 
 	jtag_mm1: jtagmm@7140000 {
@@ -689,6 +688,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU1>;
+		status = "disabled";
 	};
 
 	jtag_mm2: jtagmm@7240000 {
@@ -700,6 +700,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU2>;
+		status = "disabled";
 	};
 
 	jtag_mm3: jtagmm@7340000 {
@@ -711,6 +712,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU3>;
+		status = "disabled";
 	};
 
 	jtag_mm4: jtagmm@7440000 {
@@ -722,6 +724,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU4>;
+		status = "disabled";
 	};
 
 	jtag_mm5: jtagmm@7540000 {
@@ -733,6 +736,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU5>;
+		status = "disabled";
 	};
 
 	jtag_mm6: jtagmm@7640000 {
@@ -744,6 +748,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU6>;
+		status = "disabled";
 	};
 
 	jtag_mm7: jtagmm@7740000 {
@@ -755,6 +760,7 @@
 		clock-names = "core_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU7>;
+		status = "disabled";
 	};
 	sn_fuse: snfuse@0x00786134 {
 		compatible = "qcom,sn-fuse";
@@ -973,6 +979,33 @@
 			   &cdsp_cdsp_l3_lat>;
 
 		#clock-cells = <1>;
+		qcom,cpufreq-table-0 =
+			< 300000>,
+			< 576000>,
+			< 768000>,
+			<1017600>,
+			<1248000>,
+			<1324800>,
+			<1497600>,
+			<1612800>,
+			<1708800>,
+			<1804800>;
+
+		qcom,cpufreq-table-6 =
+			< 300000>,
+			< 652800>,
+			< 806400>,
+			< 979200>,
+			<1094400>,
+			<1209600>,
+			<1324800>,
+			<1555200>,
+			<1708800>,
+			<1843200>,
+			<1939200>,
+			<2169600>,
+			<2208000>,
+			<2304000>;
 	};
 
 	cpucc_debug: syscon@182a0018 {
@@ -1562,6 +1595,7 @@
 		qcom,adsp-remoteheap-vmid = <22 37>;
 		qcom,fastrpc-adsp-audio-pdr;
 		qcom,fastrpc-adsp-sensors-pdr;
+		qcom,qos-cores = <0 1 2 3 4 5>;
 
 		qcom,msm_fastrpc_compute_cb1 {
 			compatible = "qcom,msm-fastrpc-compute-cb";
@@ -1773,7 +1807,8 @@
 
 				msm_cdsp_rm: qcom,msm_cdsp_rm {
 					compatible = "qcom,msm-cdsp-rm";
-					qcom,qos-latency-us = <44>;
+					qcom,qos-cores = <0 1 2 3 4 5>;
+					qcom,qos-latency-us = <67>;
 					qcom,qos-maxhold-ms = <20>;
 					qcom,compute-cx-limit-en;
 					qcom,compute-priority-mode = <2>;
@@ -2358,9 +2393,10 @@
 		"MAX";
 
 		/* PM QoS */
-		qcom,pm-qos-cpu-groups = <0x3f 0xC0>;
-		qcom,pm-qos-cpu-group-latency-us = <67 67>;
+ 		qcom,pm-qos-cpu-groups = <0x1 0x2 0x4 0x8 0x10 0x20 0x40 0x80>;
+		qcom,pm-qos-cpu-group-latency-us = <100 100 100 100 100 100 100 100>;
 		qcom,pm-qos-default-cpu = <0>;
+
 
 		pinctrl-names = "dev-reset-assert", "dev-reset-deassert";
 		pinctrl-0 = <&ufs_dev_reset_assert>;
@@ -2873,7 +2909,7 @@
 			<  768000  300000000 >,
 			< 1017600  556800000 >,
 			< 1248000  768000000 >,
-			< 1497000  940800000 >,
+			< 1497600  940800000 >,
 			< 1804800 1459200000 >;
 	};
 
@@ -2890,11 +2926,11 @@
 		qcom,target-dev = <&cpu6_cpu_l3_lat>;
 		qcom,cachemiss-ev = <0x17>;
 		qcom,core-dev-table =
-			< 1094000  556800000 >,
-			< 1324000  768000000 >,
+			< 1094400  556800000 >,
+			< 1324800  768000000 >,
 			< 1708800 1190400000 >,
-			< 1939000 1382400000 >,
-			< 2438400 1459200000 >;
+			< 1939200 1382400000 >,
+			< 2208000 1459200000 >;
 	};
 
 	cpu0_cpu_llcc_lat: qcom,cpu0-cpu-llcc-lat {
@@ -2912,8 +2948,8 @@
 		qcom,target-dev = <&cpu0_cpu_llcc_lat>;
 		qcom,cachemiss-ev = <0x2A>;
 		qcom,core-dev-table =
-			< 1324000 MHZ_TO_MBPS(300, 16) >,
-			< 1497000 MHZ_TO_MBPS(466, 16) >,
+			< 1324800 MHZ_TO_MBPS(300, 16) >,
+			< 1497600 MHZ_TO_MBPS(466, 16) >,
 			< 1804800 MHZ_TO_MBPS(600, 16) >;
 	};
 
@@ -2932,11 +2968,11 @@
 		qcom,target-dev = <&cpu6_cpu_llcc_lat>;
 		qcom,cachemiss-ev = <0x2A>;
 		qcom,core-dev-table =
-			<  806000 MHZ_TO_MBPS(300, 16) >,
-			< 1094000 MHZ_TO_MBPS(466, 16) >,
-			< 1324000 MHZ_TO_MBPS(600, 16) >,
+			<  806400 MHZ_TO_MBPS(300, 16) >,
+			< 1094400 MHZ_TO_MBPS(466, 16) >,
+			< 1708800 MHZ_TO_MBPS(600, 16) >,
 			< 1708800 MHZ_TO_MBPS(806, 16) >,
-			< 2438400 MHZ_TO_MBPS(933, 16) >;
+			< 2208000 MHZ_TO_MBPS(933, 16) >;
 	};
 
 	cpu0_llcc_ddr_lat: qcom,cpu0-llcc-ddr-lat {
@@ -2957,7 +2993,7 @@
 			<  768000 MHZ_TO_MBPS( 300, 4) >,
 			< 1017600 MHZ_TO_MBPS( 451, 4) >,
 			< 1248000 MHZ_TO_MBPS( 547, 4) >,
-			< 1497000 MHZ_TO_MBPS( 768, 4) >,
+			< 1497600 MHZ_TO_MBPS( 768, 4) >,
 			< 1804800 MHZ_TO_MBPS(1017, 4) >;
 	};
 
@@ -2976,11 +3012,11 @@
 		qcom,target-dev = <&cpu6_llcc_ddr_lat>;
 		qcom,cachemiss-ev = <0x1000>;
 		qcom,core-dev-table =
-			<  806000 MHZ_TO_MBPS( 451, 4) >,
-			< 1094000 MHZ_TO_MBPS( 547, 4) >,
-			< 1324000 MHZ_TO_MBPS(1017, 4) >,
+			<  806400 MHZ_TO_MBPS( 451, 4) >,
+			< 1094400 MHZ_TO_MBPS( 547, 4) >,
+			< 1324800 MHZ_TO_MBPS(1017, 4) >,
 			< 1708800 MHZ_TO_MBPS(1555, 4) >,
-			< 2438400 MHZ_TO_MBPS(1804, 4) >;
+			< 2208000 MHZ_TO_MBPS(1804, 4) >;
 	};
 
 	cpu0_cpu_ddr_latfloor: qcom,cpu0-cpu-ddr-latfloor {
@@ -2999,8 +3035,8 @@
 		qcom,core-dev-table =
 			<  768000 MHZ_TO_MBPS( 300, 4) >,
 			< 1248000 MHZ_TO_MBPS( 451, 4) >,
-			< 1497000 MHZ_TO_MBPS( 547, 4) >,
-			< 1804800 MHZ_TO_MBPS( 768,4) >;
+			< 1497600 MHZ_TO_MBPS( 547, 4) >,
+			< 1804800 MHZ_TO_MBPS( 768, 4) >;
 	};
 
 	cpu6_cpu_ddr_latfloor: qcom,cpu6-cpu-ddr-latfloor {
@@ -3017,11 +3053,11 @@
 		qcom,cpulist = <&CPU6 &CPU7>;
 		qcom,target-dev = <&cpu6_cpu_ddr_latfloor>;
 		qcom,core-dev-table =
-			< 1094000 MHZ_TO_MBPS( 300, 4) >,
-			< 1324000 MHZ_TO_MBPS( 547, 4) >,
-			< 1552200 MHZ_TO_MBPS( 768, 4) >,
-			< 1708000 MHZ_TO_MBPS(1017, 4) >,
-			< 2438400 MHZ_TO_MBPS(1804, 4) >;
+			< 1094400 MHZ_TO_MBPS( 300, 4) >,
+			< 1324800 MHZ_TO_MBPS( 547, 4) >,
+			< 1555200 MHZ_TO_MBPS( 768, 4) >,
+			< 1708800 MHZ_TO_MBPS(1017, 4) >,
+			< 2208000 MHZ_TO_MBPS(1804, 4) >;
 	};
 
 	npu_npu_ddr_bw: qcom,npu-npu-ddr-bw {
@@ -3258,7 +3294,6 @@
 #include "pm8009.dtsi"
 #include "sdmmagpie-regulator.dtsi"
 #include "sdmmagpie-camera.dtsi"
-#include "sdmmagpie-coresight.dtsi"
 #include "sdmmagpie-usb.dtsi"
 #include "sdmmagpie-thermal.dtsi"
 
