Use user_space for soc sensor to make thermal-engine happy

--- a/arch/arm64/boot/dts/qcom/pm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/pm6150.dtsi
@@ -699,17 +699,37 @@
 	soc {
 		polling-delay-passive = <100>;
 		polling-delay = <0>;
-		thermal-governor = "low_limits_cap";
+		//thermal-governor = "low_limits_cap";
+        thermal-governor = "user_space";
 		thermal-sensors = <&bcl_soc>;
 		wake-capable-sensor;
 		tracks-low;
 
 		trips {
 			soc_trip:soc-trip {
-				temperature = <10>;
+				temperature = <2>;
 				hysteresis = <0>;
 				type = "passive";
 			};
 		};
 	};
+
+
+	/*soc-usr {
+		polling-delay-passive = <100>;
+		polling-delay = <0>;
+		thermal-governor = "user_space";
+		thermal-sensors = <&bcl_soc>;
+		wake-capable-sensor;
+		tracks-low;
+
+		trips {
+			soc_trip:soc-trip {
+				temperature = <2>;
+				hysteresis = <0>;
+				type = "passive";
+			};
+		};
+	};*/
+
 };
