--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -457,7 +457,7 @@
 	};
 
 	chosen {
-		bootargs = "rcupdate.rcu_expedited=1 rcu_nocbs=0-7";
+		bootargs = "noirqdebug nodebugmon rcupdate.rcu_expedited=1 noirqdebug nodebugmon rcu_nocbs=0-7 kpti=off cgroup_disable=pressure";
 	};
 
 	soc: soc { };
