Update config -localversion

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-baikalos-김술탄-KSU"
+CONFIG_LOCALVERSION="-baikalos-KSU_김술탄"
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
